[gd_scene load_steps=8 format=3 uid="uid://buu45qt1fkl15"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_byhbt"]
[ext_resource type="FontFile" uid="uid://cjsn6sorvmyt6" path="res://demo/assets/fonts/8bitOperatorPlusSC-Bold.ttf" id="1_cp3vr"]
[ext_resource type="Texture2D" uid="uid://c0hk12txuwnpr" path="res://ui/play/play.png" id="2_kdnmw"]

[sub_resource type="Animation" id="Animation_ngafe"]
resource_name = "appear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AgainButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4b2bv"]
_data = {
"appear": SubResource("Animation_ngafe")
}

[sub_resource type="Animation" id="Animation_y7sjd"]
resource_name = "fade"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lb6qn"]
_data = {
"fade": SubResource("Animation_y7sjd")
}

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_byhbt")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -300.0
offset_right = 161.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(160, 320)

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer"]
custom_minimum_size = Vector2(15.06, 34.01)
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("1_cp3vr")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Game Over. Score: "
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="AgainButton" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 153.0
offset_right = 16.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(16, 16)
texture_normal = ExtResource("2_kdnmw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4b2bv")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -320.0
offset_right = 180.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lb6qn")
}

[connection signal="button_up" from="AgainButton" to="." method="_on_again_button_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
